<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/order"
        android:icon="@drawable/orders_icon"
        android:title="@string/my_orders"
        />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/delivery"
        android:icon="@drawable/address_icon"
        android:title="@string/delivery_address"
        />
    <item
        android:id="@+id/payment"
        android:icon="@drawable/payment_icon"
        android:title="@string/payment_methods" />
    <item
        android:id="@+id/contactUs"
        android:icon="@drawable/contact_icon"
        android:title="@string/contact_us" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/setting_icon"
        android:title="@string/settings" />
    <item
        android:id="@+id/helps"
        android:icon="@drawable/helps_icon"
        android:title="@string/helps_faqs" />

</menu>