<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_place_this_order" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
       android:layout_gravity="center"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirmBtn"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/checkout_btn_bg"
            android:text="@string/confirm"
            android:textColor="@color/white"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelBtn"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_border_btn"
            android:text="@string/cancel"
            android:textColor="@color/select"
             />

    </RelativeLayout>

</LinearLayout>


